--- a/CSS/homepage_style.css
+++ b/CSS/homepage_style.css
@@ -20,7 +20,7 @@ nav{
 }
 .nav-links{
     display: flex;
-    width: 35%;
+    width: 30%;
     justify-content: space-around;
 }
 .nav-links a{
@@ -32,4 +32,63 @@ nav{
 }
 .nav-links li{
     list-style: none;
+}
+
+.burger{
+    display: none;
+    cursor: pointer;
+}
+
+.burger div{
+    width: 25px;
+    height: 3px;
+    background-color: rgb(224, 224, 224);
+    margin: 5px;
+} 
+
+@media screen and (max-width:1024px){
+    .nav-links{
+        width: 60px;
+    }
+}
+
+@media screen and (max-width:768px){
+    body {
+        overflow-x: hidden;
+    }
+    .nav-links{
+        position: absolute;
+        right: 0px;
+        height: 92vh;
+        top: 8vh;
+        background-color: rgb(224, 224, 224);
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 50%;
+        transform: translateX(100%);
+        transition: transform 0.5s ease-in;
+    }
+    .nav-links li{
+        opacity: 0;
+    }
+    .burger{
+        display: block;
+    }
+}
+
+.nav-active{
+    transform: translateX(0);
+}
+
+@keyframes navLinkFade{
+    from{
+        opacity: 0;
+        transform: translateX(50px);
+    }
+    to{
+        opacity: 1;
+        transform: translateX(0px
+        );
+    }
 }
