--- a/CSS/homepage_style.css
+++ b/CSS/homepage_style.css
@@ -44,6 +44,7 @@ nav{
     height: 3px;
     background-color: rgb(224, 224, 224);
     margin: 5px;
+    transition: all 0.3s ease;
 } 
 
 @media screen and (max-width:1024px){
@@ -61,7 +62,7 @@ nav{
         right: 0px;
         height: 92vh;
         top: 8vh;
-        background-color: rgb(224, 224, 224);
+        background-color: rgb(51, 55, 77);
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -91,4 +92,14 @@ nav{
         transform: translateX(0px
         );
     }
+}
+
+.toggle .line1 {
+    transform: rotate(-45deg) translate(-5px,6px);
+}
+.toggle .line2 {
+    opacity: 0;
+}
+.toggle .line3 {
+    transform: rotate(45deg) translate(-5px,-6px);
 }
